    which is now used for unified units and symbols configuration.
  - Moved all (five) "tyre_compound_list" options to "Units and symbols"
    config dialog, and is now called "tyre_compound_symbol".
  - Adjusted & unified default value for "bkg_color_circle" options
    that used in Friction circle, Heading, Navigation, Radar Widgets.
  - "show_fade_out" option no longer crops background.

* Force Widget
  - Add "show_front_downforce" & "show_rear_downforce" options,
    which show front & rear downforce reading in Newtons.
  - Add "warning_color_liftforce" that shows color indicator
    when generating lift force.

* Navigation Widget
  - Add "show_circle_background" & "bkg_color_circle" options (enabled by default),
    which shows circle background color below navigation map.
  - Add "circle_outline_color" & "circle_outline_width" options,
    which draw outline for circle background.

* Radar Widget
  - Add "show_circle_background" & "bkg_color_circle" options (disabled by default),
    which shows circle background color below vehicle radar.

* [New]Suspension position Widget
  - Show visualized suspension position (millimeter).

* Timing Widget
  - Add "show_session_personal_best" option (disabled by default),
    which shows personal best lap time from current session.

* [New]Tyre carcass temperature Widget (by Sasker)
  - Show carcass temperature of each tyres
    based on Tyre temperature Widget design,
    which helps analyzing and managing tyre grip
    and wear relative to carcass temperature change.
  - Many customizable options.

* Misc
  - Updated user guide.
  - Updated contributors.md with new contributor (Sasker).

2.4.0 (2023-11-19)
-----------------------------
* General
  - [New]Add "Grid move" option under overlay menu and tray menu (by Bernat),
    which enables grid-snap effect while moving widget
    for easy alignment and repositioning.
    "Grid move size" option is accessible from compatibility config dialog.